Fixed text not showing on experience

--- a/experience.css
+++ b/experience.css
@@ -63,51 +63,27 @@ nav img{
 
 }
 
-.text-box{
+.main-text{
     width: 90%;
     color: #fff;
-    position: absolute;
+    position:  absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    border: 1px solid white;
-    background: white;
+    
 }
 
-.text-box h1{
-    font-size: 62px;
-
+.main-text h1{
+    size: 62px;
 }
 
-.text-box p{
+.main-text p{
     margin: 10px 0 40px;
     font-size: 24px;
     color: #fff;
 
 }
-
-
-
-/*.more-btn{
-    display: inline-block;
-    text-decoration: none;
-    color: #fff;
-    border: 1px solid #fff;
-    padding: 12px 34px;
-    font-size: 16px;
-    background: transparent;
-    position: relative;
-    cursor: pointer;
-
-}
-
-.more-btn:hover{
-    border: 1px solid #f44336;
-    background: #f44336;
-    transition: 1s;
-
-}*/
 
 nav .fa{
     display: none;
